--- a/manifest.json
+++ b/manifest.json
@@ -13,12 +13,18 @@
         "<all_urls>"
       ],
       "js": [
-        "getPDF.js"
+        "js/jquery-3.1.1.min.js",
+        "getpdf.js"
       ]
     }
   ],
   "permissions": [
     "activeTab",
     "geolocation"
+  ],
+  "web_accessible_resources": [
+      "/img/",
+      "getpdf.html",
+      "inside-frame.js"
   ]
 }
