--- a/manifest.json
+++ b/manifest.json
@@ -5,7 +5,8 @@
   "manifest_version": 2,
   "description": "Get a link to a free PDF when you view scholarly articles.",
   "icons": {
-    "16": "img/favicon.png"
+    "16": "img/favicon.png",
+    "128": "img/icon-128.png"
   },
   "content_scripts": [
     {
