--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "Unpaywall",
-  "version": "1.1.0",
-  "version_name": "UnPaywall 1.2.0",
+  "version": "1.2.0",
+  "version_name": "Unpaywall 1.2.0",
   "manifest_version": 2,
   "description": "Find open-access versions of paywalled research papers, instantly.",
   "icons": {
