--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -5,8 +5,14 @@
   "manifest_version": 2,
   "description": "Find open-access versions of paywalled research papers, instantly.",
   "icons": {
-    "16": "img/favicon.png",
+    "16": "img/icon-16.png",
+    "32": "img/icon-32.png",
+    "48": "img/icon-48.png",
+    "64": "img/icon-64.png",
     "128": "img/icon-128.png"
+  },
+  "browser_action": {
+    "default_icon": "img/icon-16.png"
   },
   "content_scripts": [
     {
@@ -29,5 +35,9 @@
       "/css/",
       "/fonts/",
       "inside-frame.js"
-  ]
+  ],
+  "options_ui": {
+    "page": "options.html",
+    "chrome_style": true
+  }
 }
