--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -22,12 +22,14 @@
       "js": [
         "js/jquery-3.1.1.min.js",
         "js/alertify.min.js",
+        "options.js",
         "unpaywall.js"
       ]
     }
   ],
   "permissions": [
-    "activeTab"
+    "activeTab",
+    "storage"
   ],
   "web_accessible_resources": [
       "/img/",
