--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -13,7 +13,8 @@
   },
   "browser_action": {
     "default_icon": "img/icon-16.png",
-    "default_title": "Unpaywall preferences"
+    "default_title": "Unpaywall",
+    "default_popup": "popup.html"
   },
   "background": {
     "scripts": [
