fix problems found by firefox review.

--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -39,11 +39,7 @@
     "storage"
   ],
   "web_accessible_resources": [
-      "/img/",
-      "unpaywall.html",
-      "/css/",
-      "/fonts/",
-      "inside-frame.js"
+      "unpaywall.html"
   ],
   "options_ui": {
     "page": "options.html",
