--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "Unpaywall",
-  "version": "1.5.3",
-  "version_name": "Unpaywall 1.5.3",
+  "version": "1.54",
+  "version_name": "Unpaywall 1.5.4",
   "manifest_version": 2,
   "description": "Find open-access versions of paywalled research papers, instantly.",
   "icons": {
@@ -22,6 +22,8 @@
     ],
     "persistent": false
   },
+  "content_security_policy": "script-src 'self' https://ssl.google-analytics.com; object-src 'self'",
+
   "content_scripts": [
     {
       "matches": [
