--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -11,6 +11,11 @@
     "64": "img/icon-64.png",
     "128": "img/icon-128.png"
   },
+  "applications": {
+    "gecko": {
+      "strict_min_version": "53.0"
+    }
+  },
   "browser_action": {
     "default_icon": "img/icon-16.png",
     "default_title": "Unpaywall",
