--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "Unpaywall",
-  "version": "3.73",
-  "version_name": "Unpaywall 3.73",
+  "version": "3.74",
+  "version_name":"Unpaywall 3.74",
   "manifest_version": 2,
   "description": "Find open-access versions of paywalled research papers, instantly.",
   "icons": {
@@ -27,7 +27,7 @@
     ],
     "persistent": false
   },
-  "content_security_policy": "script-src 'self' https://ssl.google-analytics.com; object-src 'self'",
+  "content_security_policy": "script-src 'self' object-src 'self'",
 
   "content_scripts": [
     {
