--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -17,7 +17,7 @@
     }
   },
   "browser_action": {
-    "default_icon": "img/icon-16.png",
+    "default_icon": "img/icon.png",
     "default_title": "Unpaywall",
     "default_popup": "popup.html"
   },
