--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -3,7 +3,7 @@
   "version": "3.77",
   "version_name":"Unpaywall 3.77",
   "manifest_version": 2,
-  "description": "Find open-access versions of paywalled research papers, instantly.",
+  "description": "Legally get full text of scholarly articles as you browse.",
   "icons": {
     "16": "img/icon-16.png",
     "32": "img/icon-32.png",
